package com.lld.mtb;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class MtbApplication {

	public static void main(String[] args) {
		SpringApplication.run(MtbApplication.class, args);


	}

}
