package com.lld.mtb.abstractClasses;

public abstract class AbstractTicket {


}
