package com.lld.mtb.abstractClasses;

public abstract class CouponLog {
}
