package com.lld.mtb.implementations;

public class Admin {


}
