package com.lld.mtb.implementations;

import com.lld.mtb.abstractClasses.Account;

public class Guest extends Account {
}
