package com.lld.mtb.implementations;

import com.lld.mtb.abstractClasses.AbstractTicket;

public class Ticket extends AbstractTicket {


}
